Fix: submenu items not wrapping.
Regression from 0ebe37d.

--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -128,7 +128,7 @@ button#title-menu-button {
   }
 }
 
-.litter-submenu .menu-item {
+.submenu-item {
   white-space: break-spaces;
 }
 
